# bevy_debug_grid

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/shaders/: clipped_line_material.wgsl  simple_line_material.wgsl
examples/: changing_grid.rs  changing_grid_axis.rs  default_cube.rs  dynamic_floor_grid.rs  moving_grid.rs  render_layers.rs
src/: lib.rs  plugin.rs  rendering.rs  systems.rs
src/shaders/: clipped_line.wgsl  simple_line.wgsl
